<resources>
    <string name="app_name">Plan Your Trip</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">E-mail address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_email">This is not e-mail adress</string>
    <string name="error_message_password">Password must be longer than 6 characters</string>
    <string name="error_message_passwords">Passwords must be the same</string>
    <string name="registration_success_message">Registration Successful</string>
    <string name="enter_all_details_message">Please enter all the details</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome_in">Welcome in</string>
    <string name="welcome">Welcome</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="days_number">Number of days</string>
    <string name="km_number">Kilometers per day</string>
    <string name="plan_trip_button">search track</string>
    <string name="button_submit">Submit</string>
    <string name="textView_date">Date</string>
    <string name="textView_description">Description</string>
    <string name="saved_places_menu">Saved places</string>
    <string name="saved_tracks_menu">Saved tracks</string>
    <string name="button_start">Start</string>
    <string name="stop_button">Stop</string>
    <string name="name_of_place">Name of place</string>
    <string name="button_tracking">Tracking</string>
    <string name="settings">Settings</string>
    <string name="hide">Hide</string>
    <string name="google_maps_key">resValue "string", "google_maps_key",
    (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "")</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="changing_mail_text">Change your e-mail</string>
    <string name="change_password_text">Change password</string>
    <string name="change_language_text">Change language</string>
    <string name="hint_new_email">New e-mail address</string>
    <string name="hint_new_email_repetition">Repeat new e-mail address</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password_repetition">Repeat new password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_password_repetition">Repeat password</string>
    <string name="hint_email_repetition">Repeat e-mail address</string>
    <string name="error_message_emails">E-mail addresses are not the same</string>
    <string name="menu_item_delete_selected">Delete selected</string>
    <string name="menu_item_add_selected_to_visit">Add selected to visit</string>
    <string name="new_place_name">New place name</string>
    <string name="track_name">Track name</string>
    <string name="set_name">Please set name</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="new_place_description_text">New place description</string>
    <string name="enter_new_description_text">Enter new description</string>
    <string name="name_updating_fail">Name update failed</string>
    <string name="name_update_success">Name successfully updated</string>
    <string name="description_update_fail">Description update failed</string>
    <string name="description_update_success">Description successfully updated</string>
    <string name="something_wrong_message">Something went wrong</string>
    <string name="delete_title_message">Delete</string>
    <string name="delete_place_message">Do you want to delete this place?</string>
    <string name="delete_track_message">Do you want to delete this track?</string>
    <string name="delete_trip_message">Do you want to delete this trip?</string>
    <string name="save_place_button">save place</string>
    <string name="number_of_saved_places">Saved places:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="location_title">Location:</string>
    <string name="start_place">Start place:</string>
    <string name="visit_per_day">Visit per day</string>
    <string name="not_enough_chosen_places_warning_message">You must have more than at least 2 chosen places to see</string>
    <string name="no_chosen_start_place_message">You must choose start place first!</string>
    <string name="current_place">Current place:</string>
    <string name="founded_nearby">founded nearby:</string>
    <string name="places_to_see">Places to see:</string>
    <string name="show_route_in_google">Show route in google</string>
    <string name="empty_nearby_list_message">Your nearby places list is empty</string>
    <string name="places_to_visit_list_empty_message">Your places to visit list is empty</string>
    <string name="save_trip">Save trip</string>
    <string name="name_of_trip">Name of trip</string>
    <string name="saved_trips">Saved trips</string>
    <string name="number_of_days">Number of days</string>
    <string name="creation_day">Creation Day</string>
    <string name="target_location">Target Location</string>
    <string name="places_to_visit">Places to visit</string>
    <string name="home">Home</string>
    <string name="saved_tracks">Saved tracks:</string>
    <string name="saved_tracks_actionBar">Saved tracks</string>
    <string name="saved_trips_user_stats">Saved trips:</string>
    <string name="address">Address</string>
    <string name="rate">Rate</string>
    <string name="search_in_google">Search in google</string>
    <string name="trip_planning_menu">Trip planning</string>
    <string name="registration">Registration</string>
    <string name="no_description">no description</string>
    <string name="see_planned_route">See planned Route</string>
    <string name="show_options">Show options</string>
    <string name="place_added">Place added</string>
    <string name="navigation_work_alert">Navigation must be started!</string>
    <string name="place_name_alert">You have to name your place!</string>
    <string name="empty_name_alert">Name can\'t be empty</string>
    <string name="track_saved">Track saved</string>
    <string name="track_not_saved">Track not saved</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="save_tracking_question">Do you want to save the tracking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on_cancel_question">Are you sure to cancel?</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="pause">Pause</string>
    <string name="delete_track_question">Do you want delete selected track?</string>
    <string name="delete_trip_question">Do you want delete selected trip?</string>
    <string name="cant_delete_track">Can\'t delete track</string>
    <string name="cant_delete_trip">Can\'t delete trip</string>
    <string name="track_successfully_deleted">Track successfully deleted!</string>
    <string name="trip_successfully_deleted">Trip successfully deleted!</string>
    <string name="cant_delete_tracks_of">Can\'t delete tracks of</string>
    <string name="cant_delete_trip_of">Can\'t delete trip of</string>
    <string name="ok">Ok</string>
    <string name="empty_description_alert">Description can\'t be empty</string>
    <string name="delete_selected_place_question">Do you want delete selected places?</string>
    <string name="cant_delete_place">Can\'t delete place</string>
    <string name="place_successfully_deleted">Places successfully deleted!</string>
    <string name="cant_delete_place_of">Can\'t delete places of</string>
    <string name="change_email_address">Change e-mail address</string>
    <string name="not_same_emails_alert">E-mails are not the same</string>
    <string name="user_email_update_message">User email address updated to:</string>
    <string name="authentication_failed">User re-authenticated failed.</string>
    <string name="change_password">Change password</string>
    <string name="password_successfully_updated">Password successfully updated</string>
    <string name="user_authenticated">User re-authenticated.</string>
    <string name="not_same_passwords">Passwords are not the same</string>
    <string name="success_message">Success!</string>
    <string name="data_downloading_message">Downloading your data...</string>
    <string name="you_can_add_only">You can add only</string>
    <string name="more_places_to_visit">more places to visit</string>
    <string name="no_start_place_chosen">You did\'t choose the start place</string>
    <string name="attraction_list">Attraction list:</string>
    <string name="your_selected_item_is">Your Selected Item is</string>
    <string name="delete_selected">Delete selected</string>
    <string name="have_to_name_trip_alert">You have to name your trip</string>
    <string name="trip_saved">Trip saved</string>
    <string name="your_stats">Your stats:</string>
    <string name="no_selected">No selected</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="search_manually">Search manually</string>
    <string name="forgotten_password">Forgot password?</string>
    <string name="password_change">Password change</string>
    <string name="email_sent">Email sent.</string>
    <string name="something_wrong_try_again">Something went wrong. Try again.</string>
    <string name="in">in</string>
    <string name="planyourtrip">PlanYourTrip!</string>
    <string name="no_saved_tracks_alert">You have no saved tracks</string>
    <string name="no_saved_trips_alert">You have no saved trips</string>
    <string name="no_saved_places_alert">You have no saved places</string>
    <string name="end_point_title">End point</string>
    <string name="start_point_title">Start point</string>
    <string name="change_name">Change name</string>
    <string name="change_description">Change description</string>
    <string name="delete">Delete</string>
    <string name="saving_tracking">Saving tracking</string>
    <string name="saved_places">Saved places</string>
    <string name="tracking">Tracking</string>

</resources>
