<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_edittext_drawable"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/google_attraction_name_value_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_name"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:maxLines="5"
        android:textSize="16sp"
        android:layout_weight="1"
        />

        <ImageButton
            android:id="@+id/search_browser_ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_internet_search_24dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:tooltipText="@string/search_in_google"
            tools:targetApi="o" />

        <CheckBox
            android:id="@+id/google_attraction_checkBox_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginBottom="20dp"
        >

        <TableRow>
            <TextView
                android:id="@+id/google_attraction_rate_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/google_attraction_rate_value_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="5 /2"
                android:layout_gravity="center"
                />


        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/google_attraction_addres_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/google_attraction_addres_value_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                />


        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/google_attraction_latLng_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_title"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/google_attraction_latLng_value_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                />


        </TableRow>



    </TableLayout>


</LinearLayout>