<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_photo"
    android:orientation="vertical"
    tools:context=".activieties.Settings.ChangeEmailActivity"

    >

    <include
        layout="@layout/back_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">



        <EditText
            android:id="@+id/new_email_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:alpha="0.85"
            android:background="@drawable/rounded_edittext_drawable"
            android:hint="@string/hint_new_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#90000000"
            android:textColorHint="#90000000" />

        <EditText
            android:id="@+id/new_email_repetition_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:alpha="0.85"
            android:background="@drawable/rounded_edittext_drawable"
            android:hint="@string/hint_new_email_repetition"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#90000000"
            android:textColorHint="#90000000" />

        <EditText
            android:id="@+id/user_current_password_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:alpha="0.85"
            android:background="@drawable/rounded_edittext_drawable"
            android:ems="10"
            android:hint="@string/hint_current_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#90000000"
            android:textColorHint="#90000000"

            />


        <Button
            android:id="@+id/submit_email_change_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_buttons"
            android:text="@string/button_submit"
            android:textColor="@color/colorText" />

    </LinearLayout>

</LinearLayout>