<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_photo"
    android:orientation="vertical"
    tools:context=".activieties.Tracks.TrackingActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_transparent_backgroud"
        android:orientation="vertical"
        android:layout_margin="2dp">

        <Chronometer
            android:id="@+id/timer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="50sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/startButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_buttons"
                android:text="@string/button_start"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <Button
                android:id="@+id/stop_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_buttons"
                android:text="@string/stop_button"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHideShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_drop_up_black_24dp"
                android:text="@string/hide"
                android:textSize="16sp" />

            <View
                android:id="@+id/viewDivider"
                style="@style/Divider"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutOptions1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/current_place"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/editTextPlaceName1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:background="@drawable/rounded_edittext_drawable"
                android:hint="@string/name_of_place"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/descriptionET1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext_drawable"
                android:hint="@string/textView_description"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#000000"/>


            <Button
                android:id="@+id/save_place_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_buttons"
                android:text="@string/save_place_button"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mapFragmentRelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<fragment-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:id="@+id/map_fragment"-->
        <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="600dp"-->
        <!--android:layout_gravity="center"-->
        <!--tools:context=".activieties.Maps.MapActivity"-->

        <!--/>-->

        <fragment
            android:id="@+id/fragment1"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"

            />
    </RelativeLayout>
</LinearLayout>

